# contracts/openapi.json
@@ -813,6 +813,11 @@
                             "type": "string",
                             "maxLength": 20000
                           },
+                          "destination": {
+                            "default": "",
+                            "type": "string",
+                            "maxLength": 20000
+                          },
                           "valueStage": {
                             "default": "unmapped",
                             "type": "string",
@@ -2092,6 +2097,11 @@
             "maxLength": 20000
           },
           "aiPrompt": {
+            "default": "",
+            "type": "string",
+            "maxLength": 20000
+          },
+          "destination": {
             "default": "",
             "type": "string",
             "maxLength": 20000
